[gd_scene load_steps=2 format=2]

[ext_resource path="res://Gui/Struct/StructReference.gd" type="Script" id=1]

[node name="StructReference" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="LineEdit" parent="."]
margin_right = 1280.0
margin_bottom = 22.0
text = "DB:/ASDF/QWERTY"

[node name="HBox" type="HBoxContainer" parent="."]
margin_top = 22.0
margin_right = 1280.0
margin_bottom = 44.0

[node name="SpinBox" type="SpinBox" parent="HBox"]
margin_right = 1232.0
margin_bottom = 22.0
size_flags_horizontal = 3
min_value = -2.14748e+09
max_value = 2.14748e+09
rounded = true
editable = false

[node name="Goto" type="Button" parent="HBox"]
margin_left = 1236.0
margin_right = 1256.0
margin_bottom = 22.0
hint_tooltip = "Go to file in editor"
text = "<"

[node name="MenuButton" type="MenuButton" parent="HBox"]
margin_left = 1260.0
margin_right = 1280.0
margin_bottom = 22.0
hint_tooltip = "Choose a string path"
disabled = true
text = "="
flat = false
[connection signal="text_entered" from="Text" to="." method="_on_Text_text_entered"]
[connection signal="value_changed" from="HBox/SpinBox" to="." method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="HBox/Goto" to="." method="_on_Goto_pressed"]
